# movie-ticket-booking

./: CLAUDE.md  README.md  docker-compose.yml  feature_list.json  init.sh  progress.md  session-handoff.md
backend/: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/analytics/: services.py
backend/analytics/utils/: pdf_generator.py
backend/apps/bookings/: API Design Booking.md  admin.py  consumers.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
backend/apps/cinemas/: admin.py  apps.py  models.py  serializers.py  services.py  showtime_generator.py  tests.py  urls.py  views.py
backend/apps/concessions/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/contacts/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/core/: models.py  permissions.py
backend/apps/movies/: README.md  admin.py  apps.py  models.py  search_utils.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
backend/apps/promotions/: API Design Promotion.md  admin.py  api_views.py  apps.py  models.py  serializers.py  services.py  signals.py  tasks.py  urls.py
backend/apps/users/: admin.py  admin_views.py  apps.py  models.py  serializers.py  services.py  tasks.py  tests.py  throttles.py  urls.py  views.py
backend/config/: admin_site.py  asgi.py  celery.py  settings.py  urls.py
backend/load_tests/: locustfile.py
backend/scripts/: gen_date.py
backend/static/admin/: concession_toggle_category.js  custom.js  (+1 more)
docs/: setup.md  (+10 more)
(+176 files in other folders)
